<resources>
    <string name="app_name">SQLite</string>
    <string name="CustomerName">Customer Name</string>
    <string name="Age">Age</string>
    <string name="ActiveCustomer">Active Customer</string>
    <string name="ButtonViewAll">View All Records</string>
    <string name="Add">Add</string>
    <string name="StudentName">Student Name</string>
    <string name="open">Opening</string>
    <string name="close">Closing</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>